--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "allowJs": true,
-    "target": "es5"
+    "target": "es5",
+    "noUnusedParameters": false
   },
   "include": [
     "src/**/*"
